--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,17 @@
 {
+  "name": "developing-with-docker",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "author": "Nana Janashia",
+  "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mongodb": "^3.3.3"
   }
 }
