--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,8 +5,6 @@ services:
     image: my-app:1.0
     ports: 
       - 3000:3000
-    depends_on:
-      - mongo-express
   mongodb:
     image: mongo:4.2.1
     ports:
@@ -22,6 +20,4 @@ services:
       - ME_CONFIG_MONGODB_ADMINUSERNAME=admin
       - ME_CONFIG_MONGODB_ADMINPASSWORD=password
       - ME_CONFIG_MONGODB_SERVER=mongodb
-    depends_on:
-      - mongodb
-
+    restart: always
